--- a/Client/src/style/rewards/successcollect.css
+++ b/Client/src/style/rewards/successcollect.css
@@ -88,7 +88,7 @@
     .collectionid h1,
     .idnumber {
         font-size: 5vw;
-        margin-left: -100px;
+        margin-left: -110px;
     }
 
     .summarypage {
